# receipt-sorter

./: .env.example  .gitignore  CONTRIBUTING.md  MEMORY.md.example  README.md  SECURITY.md  bot.py  pyproject.toml  setup_drive.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  classification.md  development.md  google-drive.md  index.md  operations.md  providers.md  roadmap.md  security.md  setup.md  telegram.md  usage.md
receipt_sorter/: __init__.py  __main__.py  ai.py  app.py  classifier.py  config.py  corrections.py  drive.py  formatting.py  log.py  memory.py  models.py  openai_provider.py  processor.py  prompts.py  provider_factory.py  telegram_bot.py  validation.py
tests/: test_app.py  test_architecture.py  test_drive_helpers.py  test_openai_provider.py  test_processor.py  test_routing.py  test_setup_drive.py  test_telegram_handlers.py
